schema/testdata/errors/jobs_schedule.keel

job TooManyArgs {
    @schedule(
        "every 10 minutes",
        //expect-error:9:23:AttributeArgumentError:unexpected argument for @schedule as only a single argument is expected
        "also mondays"
    )
}
